--- a/index.html
+++ b/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/cryptocurrency/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CryptoCurrency</title>
+    <script type="module" crossorigin src="/cryptocurrency/assets/index.4992fb23.js"></script>
+    <link rel="stylesheet" href="/cryptocurrency/assets/index.953c68e0.css">
   </head>
   <body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    
   </body>
 </html>
